# dist.h

./: CHANGELOG.md  CMakeLists.txt  LICENSE-MIT  README.md
.github/workflows/: build.yml
example/: main.c
include/: dist.h
test/: main.c
